# dns

./: Cargo.toml  LICENSE  README.md  query_packet.txt  response_packet.txt
src/: main.rs
src/buffer/: buffer.rs
src/dns/: dns_header.rs  dns_lookup.rs  dns_packet.rs  dns_question.rs  dns_record.rs  mod.rs  query_type.rs
src/lib/: buffer.rs  dns_header.rs  dns_lookup.rs  dns_packet.rs  dns_question.rs  dns_record.rs  lib.rs
src/utils/: types.rs
