[package]
name = "dns"
version = "0.1.0"
edition = "2021"
description = "a recursive dns resolver"
homepage = "https://github.com/bitsexplained/dns"
documentation = "https://docs.rs/dns"
repository = "https://github.com/bitsexplained/dns"
readme = "README.md"
license = "MIT"
keywords = ["dns", "resolver", "recursive"]
categories = ["dns", "resolver", "recursive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
